--- a/mystyle.css
+++ b/mystyle.css
@@ -1,1 +1,10 @@
+body {
+  background-color: #04C11A;
+  color: #000000;
+  text-align: center;
+}
 
+table.center {
+   margin-left: auto;
+   margin-right: auto;
+ }
