--- a/mystyle.css
+++ b/mystyle.css
@@ -9,6 +9,10 @@ table.center {
    margin-right: auto;
  }
 
-div.content { 
-  width: 750px 
-}
+div {
+  text-align: center;
+  word-wrap: break-word;
+  width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+ }
